--- a/Mercy-CRC.html
+++ b/Mercy-CRC.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8"> 
     <title>Orbs of Mercy CRC</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mercy_crc.css">
   </head>
 
   <body>
     <h1>Resolve</h1>
     <canvas></canvas>
 
-     <script src="Mercy_orbs.js"></script> 
+     <script src="mercy_crc_orbs.js"></script> 
    
   </body>
 </html>
