--- a/mercy-crc.html
+++ b/mercy-crc.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Resolve</h1>
+    <h1>Mercy CRC</h1>
     <canvas></canvas>
 
      <script src="mercy_crc_orbs.js"></script> 
